# tap-zenefits

./: .gitignore  MANIFEST.in  README.md  config.py  pull_request_template.md  pyproject.toml  setup.py
tap_zenefits/: __init__.py  catalog.json  client.py  departments_schema.py  discover.py  employments_schema.py  helpers_dandelion.py  pay_stubs_schema.py  payruns_schema.py  people_schema.py  schema_classes.py  streams.py  sync.py  time_durations_schema.py  zenefits.py
tap_zenefits/schemas/: custom_field_values.json  custom_fields.json  departments.json  employments.json  equal_employment_opportunities.json  locations.json  pay_stubs.json  payruns.json  people.json  time_durations.json
tests/: test_client.py  test_discover.py  test_streams.py  test_tap_zenefits.py
