[tool.poetry]
name = "tap_zenefits"
version = "0.1.0"
description = ""
authors = ["Jordan <jordan.wallace.williams@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
cchardet = "^2.1.6"
aiodns = "^2.0.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
